tests/programs/modules/errors/circular/b.tiny
import "a.tiny";

fn func_b() -> int {
    return 1;
}
